force-app/main/default/objects/Vendor_PO__c/Vendor_PO__c.object-meta.xml
<CustomObject>
    <description>Vendor purchase order header. Lines in Vendor_PO_Line__c. Three-way match via Receipt__c.</description>
    <label>Vendor PO</label>
    <nameField>
        <displayFormat>PO-{YYYY}-{0000}</displayFormat>
        <label>PO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor POs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>