force-app/main/default/objects/Vendor_PO__c/fields/Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date__c</fullName>
    <label>Expected Delivery Date</label>
    <type>Date</type>
</CustomField>