force-app/main/default/objects/Vendor_PO__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vendor POs</relationshipLabel>
    <relationshipName>Vendor_POs</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>